--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -12,7 +12,7 @@
 					<select id="category_name" name="category_name" class="validate" required>
                         <option value="" disabled>Choose Category</option>
                         {% for category in categories %}
-                            {% if category.category_name == task.catergory_name %}
+                            {% if category.category_name == task.category_name %}
                                 <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
                             {% else %}
                                 <option value="{{ category.category_name }}">{{ category.category_name }}</option>
@@ -38,7 +38,7 @@
                     <textarea id="task_description" name="task_description" minlength="5"
                         maxlength="200" class="materialize-textarea validate" required>
                         {{- task.task_description -}}
-                        </textarea>
+                    </textarea>
                     <label for="task_description">Task Description</label>
                 </div>
             </div>
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
-                    <input id="due_date" name="due_date" type="text" 
+                    <input id="due_date" name="due_date" type="text"
                         value="{{ task.due_date }}" class="datepicker validate" required>
                     <label for="due_date">Due Date</label>
                 </div>
@@ -71,7 +71,7 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <!-- Cancel Button -->
+                    <!-- cancel button -->
                     <a href="{{ url_for('get_tasks') }}" class="btn-large red text-shadow">
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
