--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,7 +2,15 @@
 {% block content %}
 
     <h3 class="light-blue-text text-darken-4 center-align">Manage Categories</h3>
-    
+
+    <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_category') }}" class="btn-large light-blue darken-2 text-shadow">
+                Add Category <i class="fas fa-plus-square right"></i>
+            </a>
+        </div>
+    </div>
+
     <div class="row">
         {% for category in categories %}
             <div class="col s12 m3">
@@ -11,8 +19,8 @@
                         <span class="card-title">{{ category.category_name }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn-small green accent-4">Edit</a>
-                        <a href="#" class="btn-small light-blue lighten-1">Delete</a>
+                        <a href="#" class="btn green accent-4">Edit</a>
+                        <a href="#" class="btn light-blue lighten-1">Delete</a>
                     </div>
                 </div>
             </div>
